# rinvite

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.claude/: launch.json
.github/workflows/: ci.yml
assets/: pdf-config.json
assets/einvite/: template.html
assets/messages/: account-approval-subject.txt  account-approval.html  account-approval.txt  email-subject.txt  email.html  email.txt  sms.txt  upgrade-request-subject.txt  upgrade-request.html  upgrade-request.txt  verify-email-subject.txt  verify-email.html  verify-email.txt  whatsapp.txt
deploy/terraform/: .gitignore  .terraform.lock.hcl  README.md  backend.tf  database.tf  dns.tf  frontend.tf  locals.tf  outputs.tf  secrets.tf  terraform.tfvars.example  variables.tf  versions.tf
migrations/: 0001_create_users.sql  0002_create_events.sql  0003_create_guests.sql  0004_add_guest_contact.sql  0005_add_plan_and_verification.sql  0006_add_poruwa_ceremony.sql  0007_add_approval_and_created_at.sql
postman/: rinvite.postman_collection.json
scripts/: dev-backend.sh
src/: main.rs
src/adapter/inbound/: http.rs
src/adapter/inbound/http/: auth.rs  auth_extractor.rs  billing.rs  events.rs  html.rs  invites.rs  mod.rs
src/adapter/outbound/: argon2_hasher.rs  clock.rs  dispatch_sender.rs  jwt_issuer.rs  manual_sender.rs  mod.rs  pdf.rs
src/adapter/outbound/email/: log.rs  mod.rs  resend.rs
src/adapter/outbound/message/: account.rs  mod.rs
src/adapter/outbound/persistence/: events_memory.rs  events_postgres.rs  memory.rs  mod.rs  postgres.rs
src/adapter/outbound/sms/: log.rs  mod.rs  twilio.rs
src/adapter/outbound/whatsapp/: log.rs  twilio.rs
src/application/: auth_service.rs  billing_service.rs  cleanup.rs  event_service.rs  invite_service.rs  mod.rs
src/domain/: approval.rs  error.rs  event.rs  guest.rs  mod.rs  model.rs  plan.rs  validation.rs
src/domain/port/: inbound.rs  outbound.rs
web/: .env.example  README.md  components.json  package-lock.json  package.json  vite.config.ts
web/src/lib/: format.ts  utils.ts
web/src/lib/api/: auth.ts  billing.ts  client.spec.ts  client.ts  config.ts  events.ts  guests.ts  index.ts  invites.ts  types.ts
web/src/lib/components/: AppNav.svelte  ChannelBadge.svelte  ConfirmDialog.svelte  CsvImportDialog.svelte  EventCard.svelte  EventFormDialog.svelte  GuestFormDialog.svelte  GuestTable.svelte  LimitReachedDialog.svelte  RsvpBadge.svelte  SendReportDialog.svelte  StatBar.svelte  Tag.svelte
web/src/lib/services/: csv.spec.ts  csv.ts  events-overview.ts  guest-bulk.spec.ts  guest-bulk.ts  guest-validate.spec.ts  guest-validate.ts  index.ts  stats.spec.ts  stats.ts
web/src/lib/stores/: auth.svelte.ts  session.ts
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte  layout.css
web/src/routes/(app)/: +layout.svelte  +layout.ts
web/src/routes/(app)/events/: +page.svelte
web/src/routes/(app)/events/[id]/: +page.svelte
web/src/routes/(auth)/login/: +page.svelte
web/src/routes/(auth)/signup/: +page.svelte
web/src/routes/(auth)/verify/: +page.svelte
