[package]
name = "rinvite"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1"
axum = "0.8.9"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "uuid", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6", features = ["timeout"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
