[package]
name = "rinvite"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1"
axum = "0.8.9"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
# Decode + flatten the card template to opaque RGB before handing it to printpdf
# as a single shared image XObject. Matches the version printpdf 0.12 uses.
image = { version = "0.25", default-features = false, features = ["png"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
# default-features off drops the wasm/js and heavy optional decoders; `png`
# pulls in the `image` crate PNG decoder used by `RawImage` for the card
# template (it implies the `images` umbrella feature).
printpdf = { version = "0.12", default-features = false, features = ["png"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "uuid", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
ttf-parser = "0.25"
tower-http = { version = "0.6", features = ["timeout", "cors"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }

# Thin LTO + a single codegen unit trade compile time for a faster binary —
# worth it for the CPU-bound PDF rendering and argon2 hashing on the small,
# shared-vCPU DigitalOcean instances this deploys to.
[profile.release]
lto = "thin"
codegen-units = 1
